test: se implementan test y cobertura con jacoco igual o superior al 80%. Adicionalmente se modifica la forma en la que se guardan las reserva con el detalleReserva o mantenimiento asociado para prevenir errores